--- a/Library.css
+++ b/Library.css
@@ -44,7 +44,7 @@ body {
 /*왼쪽 날개 메뉴의 링크 스타일 정의*/
 
 .sidenav a {
-    padding: 20px 20px 20px 20px;
+    padding: 15px 20px 15px 20px;
     margin: 10px 15px 10px 15px;
     text-decoration: none;
     font-size: 18px;
@@ -60,10 +60,192 @@ body {
 }
 
 
+/* 저장 버튼에 대한 스타일 정의 */
+
+.file_input_div {
+    position: absolute;
+    left: 5%;
+    bottom: 10px;
+    width: 90%;
+    height: 130px;
+}
+
+
+/* 저장 버튼 이미지는 브라우저 크기에 따라 변하되
+    최대 크기를 지정해줍니다. */
+
+.file_input_img_btn {
+    margin: 0 0 0 0;
+    padding: 20px 36.11% 20px 36.11%;
+    background-color: rgba(253, 194, 62, 0.15);
+    border-radius: 10%;
+    max-width: 70px;
+}
+
+
+/* 구현은 했는데, 이미지 앞에 input 레이블이 있어서
+    작동하지 않습니다. */
+
+.file_input_img_btn:hover {
+    background-color: #fdc23e;
+}
+
+.file_input_hidden {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0px;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -ms-filter: alpha(opacity=0);
+    cursor: pointer;
+}
+
+.file_input_hidden:hover {
+    background-color: #fdc23e;
+}
+
+
+/*파일 이름 단락의 스타일 정의 */
+
+.file_name {
+    margin: 0;
+    padding: 0;
+    height: 7%;
+    position: absolute;
+    width: 54%;
+    z-index: -1;
+    top: 0;
+    left: 20%;
+    background-color: rgba(253, 194, 62, 0.15);
+    box-shadow: 0 0 0.5px 0 #555;
+}
+
+.file_name p {
+    position: relative;
+    left: 10px;
+    font-size: 18px;
+    color: #fdc23e;
+}
+
+
+/* 플레이어 스타일 정의 */
+
+.player {
+    margin: 0;
+    padding: 0;
+    height: 56%;
+    position: absolute;
+    width: 43.2%;
+    top: 8.5%;
+    left: 25.4%;
+    background-color: #fff;
+    box-shadow: 0 0 5px 0 #555;
+    overflow-x: hidden;
+}
+
+
+/* 비디오 스타일 정의 */
+
+#myVideo {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 10%;
+}
+
+.player_tools {
+    margin: 0;
+    padding: 0;
+    height: 4%;
+    position: absolute;
+    width: 43.2%;
+    z-index: -1;
+    bottom: 31.5%;
+    left: 25.4%;
+    background-color: #ffffff;
+    box-shadow: 0 0 5px 0 #555;
+    float: left;
+}
+
+
+/* 시간 표시 숫자에 대한 스타일 정의 */
+
+.player_tools span {
+    margin: auto;
+}
+
+
+/* 슬라이더 스타일 정의 */
+
+#slider {
+    width: 65%;
+    position: absolute;
+    top: 25%;
+    right: 5px;
+}
+
+
+/* 플레이 및 일시정지 버튼 스타일 정의 */
+
+#playButton {
+    position: static;
+    margin: 7px 5px 7px 5px;
+    background-color: #ffffff;
+    border: 0;
+    outline: 0;
+    box-shadow: 0;
+    cursor: pointer;
+    overflow: visible;
+}
+
+
+/* 동영상 팔레트 스타일 정의 */
+
+.canvas {
+    margin: 0;
+    padding: 0;
+    height: 30%;
+    position: absolute;
+    width: 54%;
+    z-index: -1;
+    bottom: 0;
+    left: 20%;
+    border: thick none #fdc23e;
+    background-color: #fdfdfd;
+    overflow-x: hidden;
+    box-shadow: 0 0 0.5px 0 #555;
+}
+
+
+/* 팔레트 내부 동영상 아이콘 스타일 정의 */
+
+.canvas button {
+    padding: 8px 8px 8px 8px;
+    margin: 8px 8px 8px 8px;
+    position: relative;
+    text-decoration: none;
+    background-color: #fdc23e;
+    /*border를 둥근 사각형으로 깎습니다. 중심으로부터 모서리까지의 길이를 지정합니다.*/
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 1px 1px 3px 0 #555;
+    font-size: 18px;
+    color: #fdfdfd;
+    display: block;
+    float: left;
+    overflow: auto;
+    /* 가운데 정렬합니다. */
+    text-align: center;
+}
+
+
 /*오른쪽 자막 단의 스타일 정의*/
 
-.subtitleScreen {
-    height: 100%;
+.pallet {
+    height: 80%;
     width: 26%;
     position: fixed;
     z-index: 1;
@@ -75,6 +257,22 @@ body {
     -moz-box-shadow: 3px 0 5px 0 #555;
     -webkit-box-shadow: 3px 0 5px 0 #555;
     box-shadow: 3px 0 5px 0 #555;
+}
+
+
+/* 편집 도구 단의 스타일 정의 */
+
+.edit_tools {
+    height: 20%;
+    width: 26%;
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    right: 0;
+    background-color: #fdfdfd;
+    overflow-x: hidden;
+    padding-top: 20px;
+    box-shadow: 0 0 2px 0 #000000;
 }
 
 
@@ -93,46 +291,6 @@ body {
     font-size: 18px;
     color: #fdfdfd;
     display: block;
-    /* 가운데 정렬합니다. */
-    text-align: center;
-}
-
-
-/* 동영상 팔레트 스타일 정의 */
-
-.pallet {
-    height: 300px;
-    position: absolute;
-    width: 54%;
-    z-index: -1;
-    bottom: 0;
-    left: 20%;
-    padding: 20px 20px 20px 20px;
-    margin: 20px 20px 20px 0px;
-    border: thick none #fdc23e;
-    background-color: #fdfdfd;
-    overflow-x: hidden;
-    padding-top: 20px;
-    box-shadow: 0 0 0.5px 0 #555;
-}
-
-
-/* 팔레트 내부 동영상 아이콘 스타일 정의 */
-
-.pallet button {
-    padding: 8px 8px 8px 8px;
-    margin: 8px 8px 8px 8px;
-    position: relative;
-    text-decoration: none;
-    background-color: #fdc23e;
-    /*border를 둥근 사각형으로 깎습니다. 중심으로부터 모서리까지의 길이를 지정합니다.*/
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 1px 1px 3px 0 #555;
-    font-size: 18px;
-    color: #fdfdfd;
-    display: block;
-    float: left;
-    overflow: auto;
     /* 가운데 정렬합니다. */
     text-align: center;
 }
