--- a/Library.css
+++ b/Library.css
@@ -107,38 +107,15 @@ body {
 }
 
 
-/*파일 이름 단락의 스타일 정의 */
-
-.file_name {
-    margin: 0;
-    padding: 0;
-    height: 7%;
-    position: absolute;
-    width: 54%;
-    z-index: -1;
-    top: 0;
-    left: 20%;
-    background-color: rgba(253, 194, 62, 0.15);
-    box-shadow: 0 0 0.5px 0 #555;
-}
-
-.file_name p {
-    position: relative;
-    left: 10px;
-    font-size: 18px;
-    color: #fdc23e;
-}
-
-
 /* 플레이어 스타일 정의 */
 
 .player {
     margin: 0;
     padding: 0;
-    height: 56%;
+    height: 30%;
     position: absolute;
     width: 43.2%;
-    top: 8.5%;
+    top: 1.5%;
     left: 25.4%;
     background-color: #fff;
     box-shadow: 0 0 5px 0 #555;
@@ -151,10 +128,11 @@ body {
 #myVideo {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: auto;
+    height: 100%;
     position: absolute;
-    top: 10%;
+    top: 0;
+    left: 10%;
+    inline-size: auto;
 }
 
 .player_tools {
@@ -164,11 +142,11 @@ body {
     position: absolute;
     width: 43.2%;
     z-index: -1;
-    bottom: 31.5%;
+    bottom: 64.5%;
     left: 25.4%;
     background-color: #ffffff;
     box-shadow: 0 0 5px 0 #555;
-    float: left;
+    vertical-align: middle;
 }
 
 
@@ -208,7 +186,7 @@ body {
 .canvas {
     margin: 0;
     padding: 0;
-    height: 30%;
+    height: 56%;
     position: absolute;
     width: 54%;
     z-index: -1;
@@ -225,8 +203,9 @@ body {
 
 .canvas button {
     padding: 8px 8px 8px 8px;
-    margin: 8px 8px 8px 8px;
+    margin: 0 8px 8px 8px;
     position: relative;
+    top: 0;
     text-decoration: none;
     background-color: #fdc23e;
     /*border를 둥근 사각형으로 깎습니다. 중심으로부터 모서리까지의 길이를 지정합니다.*/
@@ -237,8 +216,27 @@ body {
     display: block;
     float: left;
     overflow: auto;
+    cursor: pointer;
+    height: 100%;
     /* 가운데 정렬합니다. */
     text-align: center;
+}
+
+.canvas button:hover {
+    background-color: salmon;
+}
+
+*:focus {
+    outline: none;
+}
+
+.canvas div {
+    margin: 10px 0 10px 0;
+    width: auto;
+    /*블럭의 단어길이가 길어지면 생기는 문제 auto로 변경-0413수정*/
+    height: 40px;
+    /*좀커서 줄임-0413수정*/
+    float: left;
 }
 
 
@@ -252,17 +250,65 @@ body {
     top: 0;
     right: 0;
     background-color: #fdfdfd;
-    overflow-x: hidden;
+    overflow: scroll;
     padding-top: 20px;
     -moz-box-shadow: 3px 0 5px 0 #555;
     -webkit-box-shadow: 3px 0 5px 0 #555;
     box-shadow: 3px 0 5px 0 #555;
 }
 
+.pallet div {
+    position: static;
+    right: 0;
+    width: 50%;
+    border: 1px;
+    border-color: coral;
+    margin-top: 10px;
+    border-radius: 5% 5% 5% 5%;
+    float: left;
+}
+
+.pallet button {
+    padding: 8px 8px 8px 0px;
+    margin: 4px 0 4px 5px;
+    text-decoration: none;
+    background-color: rgb(250, 168, 114);
+    /*border를 둥근 사각형으로 깎습니다. 중심으로부터 모서리까지의 길이를 지정합니다.*/
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 1px 1px 3px 0 #555;
+    font-size: 18px;
+    color: #fdfdfd;
+    cursor: pointer;
+    overflow: auto;
+    height: 100%;
+    width: 50%;
+    /* 가운데 정렬합니다. */
+    text-align: center;
+    vertical-align: middle;
+}
+
+.pallet button:hover {
+    background-color: rgb(236, 92, 76);
+}
+
+.pallet :hover {
+    background-color: sandybrown;
+}
+
+.pallet span {
+    margin: 4px 0 4px 2px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #fdc23e;
+    vertical-align: middle;
+}
+
 
 /* 편집 도구 단의 스타일 정의 */
 
 .edit_tools {
+    margin: 0;
+    padding: 0;
     height: 20%;
     width: 26%;
     position: fixed;
@@ -275,14 +321,11 @@ body {
     box-shadow: 0 0 2px 0 #000000;
 }
 
-
-/*저장 버튼 스타일 정의*/
-
-#save {
-    padding: 8px 20px 8px 20px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
+.edit_tools button {
+    margin: 5px 10px 5px 10px;
+    padding: 0;
+    width: 40%;
+    height: 50px;
     text-decoration: none;
     background-color: #fdc23e;
     /*border를 둥근 사각형으로 깎습니다. 중심으로부터 모서리까지의 길이를 지정합니다.*/
@@ -293,6 +336,7 @@ body {
     display: block;
     /* 가운데 정렬합니다. */
     text-align: center;
+    float: left;
 }
 
 
